--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "edbizarro/slacker-iugu",
-  "description": "",
+  "description": "Get information from http://c.iugu.com in your slack",
   "type": "library",
   "license": "MIT",
   "keywords": [
@@ -9,7 +9,8 @@
     "slack",
     "command",
     "iugu",
-    "bot"
+    "bot",
+    "laravel-slack"
   ],
   "authors": [
     {
