--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,6 @@ before_script:
 notifications:
     script:
         - "phpunit --process-isolation"
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
